--- a/css/queries.css
+++ b/css/queries.css
@@ -1,17 +1,3 @@
-/**************************/
-/* BELOW 1344px (Smaller desktops) */
-/**************************/
-
-@media (max-width: 84em) {
-  .heading-primary {
-    font-size: 4.4rem;
-  }
-}
-
-/**************************/
-/* BELOW 1200px (Landscape Tablets) */
-/**************************/
-
 @media (max-width: 75em) {
   .grid {
     column-gap: 4.8rem;
@@ -49,12 +35,6 @@
 /**************************/
 
 @media (max-width: 59em) {
-  .hero {
-    grid-template-columns: 1fr;
-    /* padding: 0 8rem; */
-    /* gap: 6.4rem; */
-  }
-
   .hero-img {
     width: 60%;
   }
@@ -217,9 +197,6 @@
 /**************************/
 
 @media (max-width: 34em) {
-  html {
-    font-size: 40%;
-  }
   .grid {
     row-gap: 4.8rem;
   }
@@ -242,10 +219,6 @@
   .btn:link,
   .btn:visited {
     padding: 2.4rem 1.6rem;
-  }
-
-  .section-hero {
-    padding: 2.4rem 0 6.4rem 0;
   }
 
   .hero-img {
