--- a/css/work.css
+++ b/css/work.css
@@ -192,6 +192,10 @@
       width: 100%;
     }
   }
+
+  .mob-heading {
+    font-size: 2rem;
+  }
 }
 
 /**************************/
